gateway/envoy.yaml
static_resources:
  listeners:
  - name: http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress
          route_config:
            name: local_route
            virtual_hosts:
            - name: acme
              domains: ["*"]
              routes:
              - match:
                  prefix: "/acme/"
                route:
                  cluster: acme
                  prefix_rewrite: "/"
          http_filters:
          - name: envoy.filters.http.jwt_authn
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              providers:
                okta:
                  remote_jwks:
                    http_uri:
                      uri: "${ENVOY_JWKS_URI}"
                      cluster: okta_jwks
                      timeout: 5s
                    cache_duration:
                      seconds: 300
                  forward: true
                  from_headers:
                  - name: Authorization
                    value_prefix: "Bearer "
                  issuer: "${OKTA_ISSUER}"
              rules:
              - match:
                  prefix: "/acme/"
                requires:
                  provider_name: "okta"
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              http_service:
                server_uri:
                  uri: "http://authz:8181"
                  cluster: opa
                  timeout: 0.5s
                path_prefix: "/v1/data/policy/allow"
                authorization_request:
                  headers_to_add:
                  - key: "x-envoy-authz-target"
                    value: "acme"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: acme
    connect_timeout: 0.5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: acme
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: acme_api
                port_value: 8082

  - name: okta_jwks
    connect_timeout: 1s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: okta_jwks
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "${OKTA_ISSUER_HOST}"
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: "${OKTA_ISSUER_HOST}"

  - name: opa
    connect_timeout: 0.3s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: opa
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: authz
                port_value: 8181

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
